ndb - bug#50534 - fix regression in create/drop nodegroup, and make sure that it's properly tested